cloudprober/bases/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cloudprober
spec:
  rules:
  - host: cloudprober.default.uk8s.example.com
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: cloudprober
            port:
              number: 9313
  - host: prom-cb.default.uk8s.example.com
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: prom-cb
            port:
              number: 9090
