cloudprober/bases/service.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: cloudprober
spec:
  rules:
  - host: cloudprober.default.uk8s.example.com
    http:
      paths:
      - path: /
        backend:
          serviceName: cloudprober
          servicePort: 9313
---
apiVersion: v1
kind: Service
metadata:
  name: cloudprober
  labels:
    app: cloudprober
spec:
  type: ClusterIP
  ports:
  - port: 9313
    targetPort: 9313
  selector:
    app: cloudprober
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: prom-cb
spec:
  rules:
  - host: prom-cb.default.uk8s.example.com
    http:
      paths:
      - path: /
        backend:
          serviceName: prom-cb
          servicePort: 9090
---
apiVersion: v1
kind: Service
metadata:
  name: prom-cb
  labels:
    app: cloudprober
spec:
  type: ClusterIP
  ports:
  - port: 9090
    targetPort: 9090
  selector:
    app: cloudprober
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloudprober
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cloudprober
  template:
    metadata:
      name: cloudprober
      labels:
        app: cloudprober
    spec:
      containers:
      - name: cloudprober
        image: cloudprober/cloudprober
        command: 
        - /cloudprober
        args:
        - --config_file
        - /cfg/cloudprober.cfg
        - --logtostderr
        ports:
        - name: http
          containerPort: 9313
        # env:
        # # Cloudprober instance scope proxy
        # - name: HTTP_PROXY
        #   value: localhost:3128
        volumeMounts:
        - name: cloudprober-vol
          mountPath: /cfg
      - name: prom
        image: prom/prometheus
        ports:
        - containerPort: 9090
        volumeMounts:
        - name: prom-vol
          mountPath: /etc/prometheus
      - name: squid
        image: sameersbn/squid
        ports:
        - containerPort: 3128
      volumes:
      - name: cloudprober-vol
        configMap:
          name: cloudprober
          items:
          - key: cloudprober.cfg
            path: cloudprober.cfg
      - name: prom-vol
        configMap:
          name: cloudprober
          items:
          - key: prometheus.yml
            path: prometheus.yml
